118_001: Seguimiento de proceso de generación de facturación.